# tia-interpreter

./: .env  .gitignore  README.md  client_secret_36894878081-1210798fmb9nkdhr5e19090oq3q3d7m3.apps.googleusercontent.com.json  note.txt  pyproject.toml  test_output.txt
installers/: new-installer.sh  oi-windows-installer.ps1  tia-windows-installer.ps1  tia-windows-one-liner.ps1
interpreter/: CoSDI.py  __init__.py  check_env.py  cli.py  direct_api_test.py  genai.py  interpreter.py  profiles.py  simple_test.py  test_genai_key.py
interpreter/misc/: desktop.py  help.py  welcome.py
interpreter/tools/: __init__.py  bash.py  computer.py  edit.py  simple_bash.py
interpreter/ui/: tool.py
scripts/: install.sh  shell.py
tests/: test_cli.py
